# Kentiq-AI-chatbot

./: README.md  pyproject.toml  requirements.txt  templates.py
voice_ai_banking/: balance_module.py  cheque_module.py  config.py  conversation_manager.py  error_handler.py  generate_pdf_data.py  index.html  intent_detector.py  kyc_module.py  llm_module.py  main.py  pdf_reader.py  stt_module.py  transfer_module.py  tts_module.py
